<resources>
    <string name="app_name">Simple Architecture</string>
    <string name="item_details">Item Detals</string>

    <!-- Navigation Menu -->
    <string name="add_item">Add Item</string>
    <string name="list_of_Items">List of Items</string>

    <!-- Snack bar -->
    <string name="item_added">Item was added successfully</string>
    <string name="item_deleted">Item was deleted successfully</string>
    <string name="item_updated">Item was updated successfully</string>

    <!-- 'Add/Edit Item' menu -->
    <string name="name">Item Name</string>
    <string name="desc">Item Description</string>
    <string name="save_item">Save Item to DB</string>
    <string name="update_item">Update Item</string>
    <string name="item_id">Item ID: %1$s</string>

    <!-- 'List' top info -->
    <string name="uid_column">uid</string>
    <string name="name_column">name</string>
    <string name="description_column">description</string>
    <string name="note">\'Items\' table\n * Left swipe to delete the item.\n * Long press on item for edit.</string>
    <string name="other_data">any other data…</string>

</resources>
