<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SaveItemFragment">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/desc"
        android:layout_below="@+id/name"
        />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/save_item"
        android:layout_below="@+id/description"
        />

</RelativeLayout>