<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/uid_column"
            android:textSize="16sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeStepGranularity="2sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/uid_detail"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:padding="8dp"
            tools:text="@string/uid_column"
            android:textSize="16sp"
            android:textStyle="normal"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeStepGranularity="2sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/name_column"
            android:textSize="16sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeStepGranularity="2sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/name_detail"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:padding="8dp"
            tools:text="@string/name_column"
            android:textSize="16sp"
            android:textStyle="normal"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeStepGranularity="2sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/description_column"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeStepGranularity="2sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/description_detail"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:padding="8dp"
            tools:text="@string/description_column"
            android:textSize="16sp"
            android:textStyle="normal"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeStepGranularity="2sp" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/other_data"
        android:textStyle="normal"
        android:textSize="12sp" />

</LinearLayout>